<resources>
    <string name="app_name">Food App</string>
    <string name="i_am_a_trader">I am a trader</string>
    <string name="log_in">Log In</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="password">PASSWORD</string>
    <string name="i_forgot_my_password">I FORGOT MY PASSWORD</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="i_want_to_be_a_trader">I want to be a trader</string>
    <string name="first_name">FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="mobile_number">MOBILE NUMBER (without dashes and with contry code)</string>
    <string name="birthday">BIRTHDAY</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="agree_to_terms_and_conditions">AGREE TO TERMS AND CONDITIONS</string>
    <string name="sign_up">Sign Up</string>
    <string name="i_m_already_registered">I\'m already registered</string>
    <string name="i_am_a_customer">I am a customer</string>
    <string name="company_landline">COMPANY LANDLINE (optional)</string>
    <string name="i_want_to_be_a_customer">I want to be a customer</string>
    <string name="back"><![CDATA[<< Back]]></string>
    <string name="company_name">COMPANY NAME</string>
    <string name="cuisine_type_emirati_french_indian_etc">CUISINE TYPE (EMIRATI, FRENCH, INDIAN ETC)</string>
    <string name="brief_company_description">BRIEF COMPANY DESCRIPTION</string>
    <string name="upload_company_photo">UPLOAD COMPANY PHOTO</string>
    <string name="working_hours">WORKING HOURS</string>
    <string name="sunday">SUNDAY</string>
    <string name="dash">-</string>
    <string name="monday">MONDAY</string>
    <string name="tuesday">TUESDAY</string>
    <string name="wednesday">WEDNESDAY</string>
    <string name="thursday">THURSDAY</string>
    <string name="friday">FRIDAY</string>
    <string name="saturday">SATURDAY</string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="do_you_deliver">DO YOU DELIVER?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="delivery_range">DELIVERY RANGE (Up to 10 KM)</string>
    <string name="if_not_would_you_like_for_us_to_deliver_on_your_behalf_for_a_small_fee">IF NOT, WOULD YOU LIKE FOR US TO DELIVER ON YOUR BEHALF FOR A SMALL FEE?</string>
    <string name="yes_please">Yes please</string>
    <string name="important_information_for_pickup">IMPORTANT INFORMATION FOR PICKUP</string>
    <string name="no_i_will_be_pickup_only">No, I will be pickup only</string>
    <string name="next"><![CDATA[Next >>]]></string>
    <string name="upload_electronic_trade_licences">UPLOAD ELECTRONIC TRADE LICENCES</string>
    <string name="done">Done!</string>
    <string name="done_">Done</string>
    <string name="welcome">Welcome!</string>
    <string name="please_select_who_you_are">Please select who you are</string>
    <string name="customer">Customer</string>
    <string name="trader">Trader</string>
    <string name="food">Food &amp; Beverages</string>
    <string name="what_do_you_plan_on_selling">WHAT DO YOU PLAN ON SELLING</string>
    <string name="clothes">Clothes</string>
    <string name="skincare">Skincare</string>
    <string name="homeware">Homeware</string>
    <string name="toys">Toys</string>
    <string name="shoes">Shoes</string>
    <string name="bags">Bags</string>
    <string name="others">Others</string>
    <string name="if_other_then_please_specify">IF OTHER THEN PLEASE SPECIFY</string>
    <string name="upload_dish">Upload Dish</string>
    <string name="name_of_dish">NAME OF DISH</string>
    <string name="description_of_the_dish">DESCRIPTION OF THE DISH</string>
    <string name="price">PRICE</string>
    <string name="list_dish_as">LIST DISH AS</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="dish_contains">DISH CONTAINS</string>
    <string name="meat">Meat</string>
    <string name="gluten_free">Gluten free</string>
    <string name="seafood">Seafood</string>
    <string name="vegan">Vegan</string>
    <string name="nuts">Nuts</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="dairy">Dairy</string>
    <string name="pork">Pork</string>
    <string name="post_dish">Post Dish</string>
    <string name="i_didn_t_receive_a_code">I didn\'t receive a code</string>
    <string name="home">Home</string>
    <string name="near_me">Around Me</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="search">search</string>
    <string name="what_are_you_looking_for">What are you looking for?</string>
    <string name="browse_through_all_our_home_made_goods">Browse through all our home made goods</string>
    <string name="food_2">Food</string>
    <string name="mobile">MOBILE</string>
    <string name="title_activity_pick_location">Map</string>
    <string name="coordinates">23.656444, 54.006528</string>
    <string name="pick_this_location">Pick this location?</string>
    <string name="start">OPEN</string>
    <string name="close">CLOSE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_cooked_meals">HOME COOKED MEALS</string>
    <string name="from_uor_home_to_yours">From our home to yours</string>
    <string name="closest_to_me">Closest to me</string>
    <string name="by_cuisine">By cuisine</string>
    <string name="delivery_only">Delivery only</string>
    <string name="title_activity_around_me">Map</string>
    <string name="what_s_around_me">WHAT\'S AROUND ME?</string>
    <string name="map_api_key">AIzaSyB1a0nO_APsnrNxBTkGDJ9wRoTvQFEJmOc</string>
    <string name="explore_the_vicinity_to_see_what_s_close">Explore the vicinity to see what\'s close</string>
    <string name="under_minutes">In Meters</string>
    <string name="pakistani">Pakistani</string>
    <string name="beit_hessa">BEIT HESSA</string>
    <string name="_21">(21)</string>
    <string name="_50_min">50 min</string>
    <string name="delivery_pickup"><![CDATA[Delivery & pickup]]></string>
    <string name="scroll_for_morecategories"><![CDATA[Scroll for more categories >>]]></string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="my_details">My Details</string>
    <string name="my_addresses">My Addresses</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact us</string>
    <string name="sign_out">Sign out</string>
    <string name="hello_susan">Hello Susan!</string>
    <string name="_50_minutes">50 minutes</string>
    <string name="this_is_just_a_demo_description_in_order_to_check_the_behaviour_of_the_layout_and_also_to_examine_the_user_experience_that_the_layout_offers_incase_the_company_s_description_gets_too_lengthy_or_too_short_in_this_case_we_are_trying_to_insert_a_long_description_that_this_app_might_come_across_currently_the_design_contains_only_4_rows_but_in_reality_these_lines_may_exceed_even_to_7_or_may_be_eight">This is just a demo description in order to check the behaviour of the layout and also to examine the user experience that the layout offers incase the company\'s description gets too lengthy or too short, in this case, we are trying to insert a long description that this app might come across, currently, the design contains only 4 rows but in reality, these lines may exceed even to 7 or may be eight.</string>
    <string name="all">All</string>
    <string name="starters">Starters</string>
    <string name="main_course">Main course</string>
    <string name="sides">Sides</string>
    <string name="deserts">Deserts</string>
    <string name="biryani">Biryani</string>
    <string name="this_is_just_a_demo_description_in_order_to_dtect_the_behaviour_of_the_food_row_design_and_determine_whether_this_row_design_needs_to_be_changed_or_onot">This is just a demo description in order to dtect the behaviour of the food row design and determine whether this row design needs to be changed or onot</string>
    <string name="aed">AED</string>
    <string name="_23">23</string>
    <string name="my_detials_c">MY DETAILS</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="first_name_s">First Name</string>
    <string name="last_name_s">Last Name</string>
    <string name="mobile_number_s">Mobile Number</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="clothes_c">CLOTHES</string>
    <string name="browse_to_find_your_next_new_outfit">Browse to find your next new outfit</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="children">Children</string>
    <string name="abaya">Abaya</string>
    <string name="abaya_sellers">FANCY CLOTHES SELLERS</string>
    <string name="must_be_6_or_more_characters">* Must be 6 or more characters</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password *</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_password_n">CHANGE PASSWORD</string>
    <string name="keep_your_details_safe">Keep your details safe</string>
    <string name="completed_orders">Completed Orders</string>
    <string name="add_address">ADD ADDRESS</string>
    <string name="mention_your_whereabouts">Mention your whereabouts</string>
    <string name="default_address">Default address</string>
    <string name="my_addresses_s">MY ADDRESSES</string>
    <string name="set_your_preferred_delivery_location">Set your preferred delivery location</string>
    <string name="add_new_address">Add New Address</string>
    <string name="add">Add</string>
    <string name="company_details">COMPANY DETAILS</string>
    <string name="tell_us_about_your_shop">Tell us about your shop</string>
    <string name="company_name_s">Company Name</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="company_description">Company Description</string>
    <string name="shop_type">Shop Type</string>
    <string name="accessories">Accessories</string>
    <string name="upload_company_photo_n">Upload Company Photo</string>
    <string name="your_location_n">Your Location</string>
    <string name="time_neede_to_deliver">TIME NEEDED TO DELIVER</string>
    <string name="company_phone">Company Phone</string>
    <string name="current_default">Current Default</string>
    <string name="edit">EDIT</string>
    <string name="quarter_330_10_ghazi_camp_paf_base_kohat">Quarter 330/10, Ghazi Camp, PAF Base Kohat</string>
    <string name="delivery_price">DELIVERY PRICE</string>
    <string name="main">Main</string>
    <string name="upload_new_item">Upload New Item</string>
    <string name="name_of_product">NAME OF PRODUCT</string>
    <string name="description_of_product">DESCRIPTION OF PRODUCT</string>
    <string name="list_item_as">LIST ITEM AS</string>
    <string name="product_sizing">PRODUCT SIZING</string>
    <string name="add_up_to_3_images_of_the_product">ADD UP TO 3 IMAGES OF THE PRODUCT</string>
    <string name="upload">Upload</string>
    <string name="enter_message_here">Enter message here...</string>
    <string name="your_chats">YOUR CHATS</string>
    <string name="get_in_contact_with_your_customers">Get in contact with your customers</string>
    <string name="muhammad_faizan">Muhammad Faizan</string>
    <string name="edit_dish">EDIT DISH</string>
    <string name="i_have_an_issue_with_an_order">I HAVE AN ISSUE WITH AN ORDER</string>
    <string name="send_us_feedback_abut_the_app">SEND US FEEDBACK ABOUT THE APP</string>
    <string name="rate_us_on_the_play_store">RATE US ON THE PLAY STORE</string>
    <string name="cancel">CANCEL</string>
</resources>