<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />
    <item
        android:title="@string/near_me"
        android:id="@+id/item_location"
        android:icon="@drawable/ic_location" />
    <item
        android:title="@string/cart"
        android:id="@+id/item_cart"
        android:icon="@drawable/ic_cart" />
    <item
        android:title="@string/my_orders"
        android:id="@+id/item_orders"
        android:icon="@drawable/ic_notes" />
    <item
        android:title="@string/profile"
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_person" />
</menu>