<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    tools:context=".customer.activity_customer_clothes.ActivityCustomerClothes">

    <EditText
        android:id="@+id/edt_customer_home_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/clothes_c"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/browse_to_find_your_next_new_outfit"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/txt_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/tab_back_selected"
            android:gravity="center"
            android:text="@string/all"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_women"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/women"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_men"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/men"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_children"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/children"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/clothes_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
