<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    tools:context=".customer.activity_customer_food_companies.ActivityCustomerFoodCompanies">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/home_cooked_meals"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_uor_home_to_yours"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/txt_first_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:background="@drawable/tab_back_selected"
            android:text="@string/closest_to_me"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_second_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/by_cuisine"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_third_tab"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:text="@string/delivery_only"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textSize="12sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/food_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp" />

</LinearLayout>