<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_issue_with_order"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/i_have_an_issue_with_an_order"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/txt_feedback"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/send_us_feedback_abut_the_app"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/txt_rate_us"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:gravity="center"
        android:text="@string/rate_us_on_the_play_store"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGray" />

    <Button
        android:id="@+id/btn_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/cancel"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"
        android:textStyle="bold" />

</LinearLayout>