<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="32dp"
    android:paddingTop="32dp"
    android:paddingRight="32dp"
    tools:context=".customer.activity_customer_clothes_companies.ActivityCustomerClothesCompanies">

    <EditText
        android:id="@+id/edt_customer_home_search"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="8dp"
        android:hint="@string/search"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/clothes_c"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/browse_to_find_your_next_new_outfit"
        android:textAlignment="center" />

    <include layout="@layout/recycler_view" />

</LinearLayout>
